fix css alignment

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -16,7 +16,7 @@
 
       > div {
         display: flex;
-        gap: 33px;
+        gap: 29px;
 
         button {
           height: 40px;
